--- a/index.html
+++ b/index.html
@@ -18,8 +18,17 @@
             <button data-time='600'>10 Minutes</button>
         </div>
         <div class="play-area">
-            <img src="svg/moving-outline.svg" alt="moving-outline">
-            <img src="svg/track-outline.svg" alt="track-outline">
+            <svg width="453" height="453" viewBox="0 0 453 453" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <circle cx="226.5" cy="226.5" r="216.5" stroke="white" stroke-width="20"/>
+            </svg>
+            <!-- <img src="svg/track-outline.svg" alt="track-outline"> -->
+            <!-- blue line -->
+            <svg width="453" height="453" viewBox="0 0 453 453" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <circle cx="226.5" cy="226.5" r="216.5" stroke="#018EBA" stroke-width="20" class="moving-outline"/>
+            </svg>
+
+            <!-- <img src="svg/moving-outline.svg" alt="moving-outline" class="moving-outline">  -->
+            <!-- end of blue line -->
             <img src="svg/play.svg" alt="play-button" class="play-pause">
             <h3 class="elapsed-time">00:00</h3>
         </div>
